@@ -14,10 +14,10 @@ index 772bd2a7ea..2b345c854c 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 01ac6c715e..061d77e0dd 100644
+index 1e94d249da..e1313ed69b 100644
 --- a/Changes
 +++ b/Changes
-@@ -560,6 +560,16 @@ OCaml 5.0
+@@ -563,6 +563,16 @@ OCaml 5.0
  - #11417: Fix regression allowing virtual methods in non-virtual classes.
    (Leo White, review by Florian Angeletti)
  
@@ -34,7 +34,7 @@ index 01ac6c715e..061d77e0dd 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -595,13 +605,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -598,13 +608,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -50,7 +50,7 @@ index 01ac6c715e..061d77e0dd 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -705,6 +715,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -708,6 +718,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10786: The implementation of Complex.norm now uses Float.hypot.
    (Christophe Troestler, review by David Allsopp and Xavier Leroy)
  
@@ -60,7 +60,7 @@ index 01ac6c715e..061d77e0dd 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -964,6 +977,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -967,6 +980,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -7621,7 +7621,7 @@ index 0000000000..7761f15210
 +     fi
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..fa36b1cd6d
+index 0000000000..0f5fc1174e
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,7552 @@
@@ -7641,10 +7641,10 @@ index 0000000000..fa36b1cd6d
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 01ac6c715e..061d77e0dd 100644
++index 1e94d249da..e1313ed69b 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -560,6 +560,16 @@ OCaml 5.0
++@@ -563,6 +563,16 @@ OCaml 5.0
 + - #11417: Fix regression allowing virtual methods in non-virtual classes.
 +   (Leo White, review by Florian Angeletti)
 + 
@@ -7661,7 +7661,7 @@ index 0000000000..fa36b1cd6d
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -595,13 +605,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -598,13 +608,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -7677,7 +7677,7 @@ index 0000000000..fa36b1cd6d
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -705,6 +715,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -708,6 +718,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10786: The implementation of Complex.norm now uses Float.hypot.
 +   (Christophe Troestler, review by David Allsopp and Xavier Leroy)
 + 
@@ -7687,7 +7687,7 @@ index 0000000000..fa36b1cd6d
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -964,6 +977,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -967,6 +980,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
